fix small css bug in landing page on small devices

--- a/css/index.css
+++ b/css/index.css
@@ -186,5 +186,6 @@
   }
   #what-it-does .feature {
     width: 100%;
+    margin: 0;
   }
 }
